[gd_scene load_steps=2 format=3 uid="uid://bg2pn3hm3w0b7"]

[ext_resource type="Script" path="res://combatent_battle_data.gd" id="1_njiwe"]

[node name="CharacterName" type="Control"]
custom_minimum_size = Vector2(600, 48)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_njiwe")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="CharacterName" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="CharacterName"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 1
text = "CHAR_NAME"
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="CharacterName"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0
show_percentage = false

[node name="MarginContainer" type="MarginContainer" parent="CharacterName/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 0

[node name="NumberValues" type="Label" parent="CharacterName/HealthBar/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24
text = "999 / 999"
